# SHAS

./: README.md  setup.cfg
SHAS/eval_scripts/: eval_custom_segmentation.sh
SHAS/supervised_hybrid/: data.py  segment.py  train.py
src/supervised_hybrid/: online.py  segment.py
