[metadata]
name = SHAS
version = 0.1
description = Audio semgentation based on wav2vec 2.0
long_description = file: README.md

[options]
packages = find:
python_requires = >=3.8
install_requires =
    torch
    torchaudio
    transformers
    tqdm
    numpy
    SoundFile
    PyYAML
    scikit_learn
    pandas

[options.entry_points]
console_scripts =
    shas-segment = SHAS.supervised_hybrid.segment:main
    shas-train = SHAS.supervised_hybrid.train:main
